--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "mygraphql",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/babel-node --presets 'es2015' server.js"
   },
   "keywords": [],
@@ -16,6 +14,8 @@
     "babel-preset-es2015": "^6.24.1",
     "express": "^4.15.3",
     "express-graphql": "^0.6.6",
-    "graphql": "^0.10.1"
+    "graphql": "^0.10.1",
+    "graphql-scalars": "^0.1.3",
+    "moment": "^2.18.1"
   }
 }
