--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-graphql": "^0.6.6",
     "graphql": "^0.10.1",
     "graphql-scalars": "^0.1.3",
-    "moment": "^2.18.1"
+    "moment": "^2.18.1",
+    "mongodb": "^2.2.28"
   }
 }
