--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "express-graphql": "0.5.4",
     "graphql": "0.7.0",
     "graphql-relay": "0.4.3",
+    "graphql-scalars": "^0.1.3",
+    "moment": "^2.18.1",
+    "mongodb": "^2.2.28",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-relay": "0.9.3",
